--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,35 @@
+<div class="container">
+	<div class="title">
+		<h1>Meteor</h1>
+	</div>
+	<div class="ghost">
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+	</div>
+     <div class="ghost">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+    <div class="ghost">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+    
+</div>
+<div class="content">
+    <h2>here we cook</h2>
+    <div class="flex-row">
 
-<p>home</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean venenatis, erat quis viverra dictum, mi ex eleifend ex, quis euismod magna lacus eu arcu. Etiam eu ligula at massa ullamcorper dapibus. Praesent dignissim faucibus nibh, in blandit metus ullamcorper a. Vivamus id posuere tortor, scelerisque suscipit quam. Pellentesque mauris dolor, elementum ac sagittis et, pharetra sit amet elit. Quisque bibendum est felis, nec facilisis nunc commodo et. Suspendisse vel leo velit. Proin ac congue diam. Duis tortor nisl, commodo at nisl ut, maximus rutrum augue. Nulla pretium quis ex non malesuada. Curabitur tempus, odio aliquet ultrices laoreet, massa lorem dapibus ante, quis vehicula augue arcu eu turpis.Donec lacinia nec dolor sit amet ullamcorper. Mauris aliquet facilisis interdum. Maecenas non massa ac ante egestas semper non ac augue. Donec ante metus, mattis eget diam nec, porta blandit quam. Morbi luctus justo sit amet dolor laoreet, nec hendrerit nibh feugiat. Duis pharetra eget nisl quis egestas. Morbi gravida vulputate augue, ac commodo magna sodales non. Aliquam erat volutpat. Nunc rutrum at nulla sit amet vulputate. Cras dapibus ipsum quam, a placerat lorem convallis at. Nulla accumsan diam sed enim gravida varius.</p>
+        <img src="../../../assets/crypto.svg"/>
+    </div>
+</div>
