--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,22 +1,131 @@
-@use '@angular/material' as mat;
-@import '../../../custom-theme.scss'; 
+@use "@angular/material" as mat;
+@import "../../../custom-theme.scss";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap");
 
-mat-toolbar{
- display: flex;
- flex-direction: row;
- justify-content: space-between;
-  flex:1;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  display: grid;
+  place-items: center;
+}
+
+.container {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+}
+
+.content {
+  height: 100vh;
+  background-color: mat.get-color-from-palette($meteor-primary, 500);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-left: 10vh;
+  padding-right: 10vh;
+  padding-top: 5vh;
+  h2 {
+    font-size: 10vmin;
+  }
+  p {
+    font-size: 3vmin;
+    padding-left: 20px;
+    float: right;
+  }
+  img {
+    max-width: 40%;
+    max-height: 33%;
+    float: left;
+  }
+}
+
+.title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.title h1 {
+  font-size: 25vmin;
+  font-weight: 900;
+  font-family: "Montserrat", sans-serif;
+  color: mat.get-color-from-palette($meteor-primary, 500);
+}
+
+.ghost {
+  width: 8vmin;
+  height: 12vmin;
+  background-color: #eee;
+  border-radius: 100% / 70% 70% 0% 0%;
+  position: relative;
+  /* Initial positioning off the top-right corner; adjust as necessary */
+  top: -70%; /* Start above the viewport to match -10vh initial translation */
+  right: -10%;
+  opacity: 0.9;
+  mix-blend-mode: exclusion;
+  animation: ghostMove 6s ease-out infinite;
+}
+/* Adding staggered animation delays */
+.ghost:nth-child(2) {
+  animation-delay: -2s;
+}
+
+.ghost:nth-child(3) {
+  animation-delay: -4s;
+}
+
+.ghost:nth-child(4) {
+  animation-delay: -6s;
+}
+
+@keyframes ghostMove {
+  0% {
+    transform: translate(90vw, 10vh) rotateZ(-95deg);
+  }
+  100% {
+    transform: translate(-100vw, 100vh) rotateZ(-45deg);
+  }
+}
+.ghost div {
+  position: absolute;
+  width: 20%;
+  background-color: #eee;
+}
+.ghost div:nth-of-type(1) {
+  height: 7vmin;
+  left: 0;
+  bottom: -6vmin;
+  border-radius: 100% / 0% 0% 50% 50%;
+}
+.ghost div:nth-of-type(2),
+.ghost div:nth-of-type(4) {
+  height: 4vmin;
+  left: 20%;
+  bottom: -3vmin;
+  border-radius: 100% / 50% 50% 0% 0%;
   background-color: transparent;
 }
-.title{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  h1{
-    color: mat.get-color-from-palette($meteor-primary, 500);
-    font-weight: 900;
-  }
-  img{
-    width: 50px;
-  }
+.ghost div:nth-of-type(3) {
+  height: 4vmin;
+  left: 40%;
+  bottom: -3.95vmin;
+  border-radius: 100% / 0% 0% 60% 60%;
+  background-color: #eee;
+}
+.ghost div:nth-of-type(4) {
+  left: 60%;
+}
+.ghost div:nth-of-type(5) {
+  height: 3vmin;
+  left: 80%;
+  bottom: -2.9vmin;
+  border-radius: 100% / 0% 0% 70% 70%;
+  background-color: #eee;
 }
